OSDOP-270: Provide PEARS and WONS related applications (#118)
Added PEARS and WONS related applications inputs to the related information section